// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/test/stories/transferwise.test.ts host.currency = payee.currency != expense.currency = collective.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency | data.expenseToHostFxRate |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ | ------------------------ |
| EXPENSE | Expense in EUR | CREDIT | 10099     | -113       | 11582                | 10000                         | Donnortello | EUR      | Babel EUR              | NULL                   | USD          | 1.1468                   |
| EXPENSE | Expense in EUR | DEBIT  | -10000    | -113       | -11468               | -10099                        | Babel EUR   | EUR      | Donnortello            | Open Source Collective | USD          | 1.1468                   |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel EUR   | EUR      | Open Source Collective | NULL                   | USD          |                          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency != expense.currency != collective.currency = host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency | data.expenseToHostFxRate |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ | ------------------------ |
| EXPENSE | Expense in EUR | CREDIT | 11565     | -97        | 11565                | 11468                         | Donnortello | USD      | Babel USD              | NULL                   | USD          | 1.1468                   |
| EXPENSE | Expense in EUR | DEBIT  | -11468    | -97        | -11468               | -11565                        | Babel USD   | USD      | Donnortello            | Open Source Collective | USD          | 1.1468                   |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel USD   | USD      | Open Source Collective | NULL                   | USD          |                          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency != expense.currency != collective.currency = host.currency 2`] = `
Object {
  "collectiveToHost": 1,
  "expenseToCollective": 1.1468,
  "expenseToHost": 1.1468,
  "expenseToPayoutMethod": 0.857252,
}
`;

exports[`/test/stories/transferwise.test.ts payee.currency != expense.currency = collective.currency != host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency | data.expenseToHostFxRate |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ | ------------------------ |
| EXPENSE | Expense in EUR | CREDIT | 10085     | -97        | 11565                | 10000                         | Donnortello | EUR      | Babel EUR              | NULL                   | USD          | 1.1468                   |
| EXPENSE | Expense in EUR | DEBIT  | -10000    | -97        | -11468               | -10085                        | Babel EUR   | EUR      | Donnortello            | Open Source Collective | USD          | 1.1468                   |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel EUR   | EUR      | Open Source Collective | NULL                   | USD          |                          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency != expense.currency = collective.currency = host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency | data.expenseToHostFxRate |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ | ------------------------ |
| EXPENSE | Expense in USD | CREDIT | 10084     | -84        | 10084                | 10000                         | Donnortello | USD      | Babel USD              | NULL                   | USD          | 1                        |
| EXPENSE | Expense in USD | DEBIT  | -10000    | -84        | -10000               | -10084                        | Babel USD   | USD      | Donnortello            | Open Source Collective | USD          | 1                        |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel USD   | USD      | Open Source Collective | NULL                   | USD          |                          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency = expense.currency != collective.currency = host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency | data.expenseToHostFxRate |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ | ------------------------ |
| EXPENSE | Expense in EUR | CREDIT | 11556     | -88        | 11556                | 11468                         | Donnortello | USD      | Babel USD              | NULL                   | USD          | 1.1468                   |
| EXPENSE | Expense in EUR | DEBIT  | -11468    | -88        | -11468               | -11556                        | Babel USD   | USD      | Donnortello            | Open Source Collective | USD          | 1.1468                   |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel USD   | USD      | Open Source Collective | NULL                   | USD          |                          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency = expense.currency = collective.currency != host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency | data.expenseToHostFxRate |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ | ------------------------ |
| EXPENSE | Expense in EUR | CREDIT | 10077     | -88        | 11556                | 10000                         | Donnortello | EUR      | Babel EUR              | NULL                   | USD          | 1.1468                   |
| EXPENSE | Expense in EUR | DEBIT  | -10000    | -88        | -11468               | -10077                        | Babel EUR   | EUR      | Donnortello            | Open Source Collective | USD          | 1.1468                   |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel EUR   | EUR      | Open Source Collective | NULL                   | USD          |                          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency = expense.currency = collective.currency = host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency | data.expenseToHostFxRate |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ | ------------------------ |
| EXPENSE | Expense in USD | CREDIT | 10113     | -113       | 10113                | 10000                         | Donnortello | USD      | Babel USD              | NULL                   | USD          | 1                        |
| EXPENSE | Expense in USD | DEBIT  | -10000    | -113       | -10000               | -10113                        | Babel USD   | USD      | Donnortello            | Open Source Collective | USD          | 1                        |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel USD   | USD      | Open Source Collective | NULL                   | USD          |                          |"
`;
